--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   },
   "homepage": "https://github.com/kupharmd05/BusinessCardReader#readme",
   "dependencies": {
+    "@google-cloud/storage": "^2.4.3",
+    "@google-cloud/vision": "^0.25.0",
+    "base64-to-image": "^1.0.2",
     "body-parser": "^1.18.3",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4"
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "fs": "0.0.1-security",
+    "getusermedia": "^2.0.1"
   }
 }
